--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-confirm-alert": "^3.0.2",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
