--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.4.0",
     "react-confirm-alert": "^3.0.2",
     "react-dom": "^18.1.0",
+    "react-feather": "^2.0.10",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
