--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-confirm-alert": "^3.0.2",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.1.0",
     "react-feather": "^2.0.10",
     "react-redux": "^8.0.2",
