--- a/package.json
+++ b/package.json
@@ -19,12 +19,10 @@
     "react-feather": "^2.0.10",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
+    "react-scripts": "5.0.1",
     "react-toastify": "^9.0.4",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.0"
-  },
-  "devDependencies": {
-    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
